# ecology-bot

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: _check.yaml  _test.yaml  feature.yaml
docker/bot/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
ecology_bot/: __main__.py  config.py
ecology_bot/adapters/database/: __main__.py  alembic.ini  base.py  config.py  models.py  utils.py
ecology_bot/adapters/database/migrations/: env.py
ecology_bot/adapters/database/migrations/versions/: 2024_11_02_dba228c5c91e_initial_migration.py
ecology_bot/admin/: app.py  wsgi.py
ecology_bot/admin/admin/: admin_conf.py  view.py
ecology_bot/admin/admin/models/: __init__.py  awesome_data.py  district.py  eco_activity.py  event.py  global_event.py  global_mailing.py  organization.py  region.py  text_chunk.py  user.py  view.py  volunteer_type.py
ecology_bot/admin/admin/pages/: auth.py  home.py
ecology_bot/admin/admin/utils/: text_area_field.py
ecology_bot/admin/commands/: database.py
ecology_bot/admin/frontend/templates/: form.html
ecology_bot/admin/frontend/templates/admin_panel/: custom_master.html  home.html  login.html
ecology_bot/admin/utils/: login_manager.py
ecology_bot/application/: config.py  exceptions.py
ecology_bot/bot/: main.py
ecology_bot/bot/dialogs/: main_menu.py  messages.py  states.py
ecology_bot/bot/dialogs/organizations/: event_register.py  organization_menu.py  organization_register.py
ecology_bot/bot/dialogs/profile/: profile_delete.py  profile_menu.py  profile_register.py  volunteer_register.py
ecology_bot/bot/middlewares/: database_middleware.py  redis_middleware.py
ecology_bot/bot/services/: repo.py  utils.py
ecology_bot/bot/services/dao/: __init__.py  activitiy.py  awesome_data.py  base.py  district.py  event.py  global_event.py  organization.py  region.py  text.py  user.py  volunteer_type.py
ecology_bot/bot/utils/: start_button.py  switch_to_button.py
ecology_bot/bot/windows/: activity_window.py  confirm_window.py  district_window.py  event_type_window.py  global_event_list_window.py  global_event_window.py  input_text_window.py  region_window.py  volunteer_type_window.py
ecology_bot/database/: __init__.py  base.py  engine.py  filling_db.sql  mixins.py  models.py
ecology_bot/database/migrations/: env.py
ecology_bot/database/migrations/versions/: 015089f93c19_.py  0fc6c4105340_.py  582ca935d161_.py  68bdbf779a90_.py  84db727128eb_global_mailing.py  84dc311cbb0a_last_update.py  8abeadfe1c9b_.py  8da0c2842cb3_init_migrations.py  cd96b9c5b277_.py  dabcd34d21ed_last_update.py
ecology_bot/domains/entities/: district.py  event.py
ecology_bot/presentors/admin/: app.py  gunicorn_conf.py
ecology_bot/presentors/admin/admin/: admin_conf.py  view.py
ecology_bot/presentors/admin/admin/models/: __init__.py  district.py  global_event.py  global_event_user.py  global_mailing.py  organization.py  profile.py  region.py  text_chunk.py  user.py
ecology_bot/presentors/admin/admin/pages/: auth.py  home.py
ecology_bot/presentors/admin/commands/: __init__.py  database.py
ecology_bot/presentors/admin/frontend/templates/admin_panel/: custom_master.html
ecology_bot/presentors/admin/utils/: login_manager.py
ecology_bot/presentors/bot/: main.py
ecology_bot/presentors/bot/dialogs/: main_menu.py  messages.py  states.py
ecology_bot/presentors/bot/dialogs/organizations/: event_register.py  organization_menu.py  organization_register.py
ecology_bot/presentors/bot/dialogs/profile/: profile_delete.py  profile_menu.py  profile_register.py  volunteer_register.py
ecology_bot/presentors/bot/middlewares/: database_middleware.py
ecology_bot/presentors/bot/services/: cache.py  repo.py  utils.py
ecology_bot/presentors/bot/services/dao/: __init__.py  activitiy.py  awesome_data.py  base.py  district.py  event.py  global_event.py  organization.py  region.py  text.py  user.py  volunteer_type.py
ecology_bot/presentors/bot/utils/: start_button.py
ecology_bot/presentors/bot/windows/: activity_window.py  confirm_window.py  district_window.py  event_type_window.py  global_event_window.py  input_text_window.py  region_window.py  volunteer_type_window.py
ecology_bot/presentors/workers/: mailing.py
ecology_bot/utils/: __init__.py  get_settings.py
ecology_bot/workers/: celery.py  mailing.py
