[tool.poetry]
name = "ecology_bot"
version = "0.1.0"
description = "Бот"
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.2"
aiogram = "^2.22"
aiogram-dialog = "^1.8.0"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.40"
diagrams = "^0.21.1"
Flask = "^2.2.2"
Flask-Admin = "^1.6.0"
Flask-Login = "^0.6.2"
SQLAlchemy-Utils = "^0.38.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.1"
gunicorn = "^20.1.0"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
loguru = "^0.6.0"
celery = "^5.2.7"
aioredis = "^2.0.1"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[tool.poetry.scripts]
bot = "ecology_bot.bot.main:start"
admin = "ecology_bot.admin.wsgi:app"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
