[tool.poetry]
name = "ecology_bot"
version = "0.2.0"
description = "Ecology Telegram bot with admin panel"
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.9.2"
aiogram = "^2.22"
aiogram-dialog = "^1.8.0"
psycopg2-binary = "^2.9.3"
Flask = "^2.2.2"
Flask-Admin = "^1.6.0"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.1"
gunicorn = "^20.1.0"
alembic = "^1.8.1"
asyncpg = "^0.30.0"
celery = "^5.2.7"
redis = "^4.3.4"
aiocache = {extras = ["redis"], version = "^0.11.1"}
ujson = "^5.5.0"
msgpack = "^1.0.4"
aioredis = "1.3.1"
sqlalchemy = "^2.0.36"
aiomisc = "^17.5.26"

[tool.poetry.group.dev.dependencies]
pytest = "8.2"
aiomisc-pytest = "^1.2.1"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
dirty-equals = "^0.8.0"
ruff = "^0.6.8"

[tool.poetry.scripts]
bot = "ecology_bot.presentors.bot.main:start"
admin = "ecology_bot.admin.wsgi:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"

[tool.coverage.run]
branch = true
source = ["ecology_bot", "tests"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "BLE",
    "C90",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "PLE",
    "Q",
    "RUF006",
    "RUF100",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
]
ignore = ["ISC001"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["ecology_bot", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
]
ignore_missing_imports = true
